--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,5 @@ spring.mvc.view.suffix=.jsp
 secondlife.app.jwt-secret=u4nSecret5oQueSeaBuenoXjuDrpOlsss/edsR5T6jgtr
 secondlife.app.jwt-expiration-ms=9000000
 
+server.port=${PORT:8080}
+
