Migración de frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,15 +37,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format-sql=false
 
-# *********************************************
-# 
-# JSP
-#
-# *********************************************
-
-spring.mvc.view.prefix=/WEB-INF/vistas/
-spring.mvc.view.suffix=.jsp
-
 #######################################################
 #
 # Spring Security Configuration
@@ -56,4 +47,16 @@ secondlife.app.jwt-secret=u4nSecret5oQueSeaBuenoXjuDrpOlsss/edsR5T6jgtr
 secondlife.app.jwt-expiration-ms=9000000
 
 server.port=${PORT:8080}
+
+# Carpeta donde buscar las plantillas .html (por defecto 'classpath:/templates/')
+spring.thymeleaf.prefix=classpath:/META-INF/resources/WEB-INF/vistas/
+
+# Sufijo para las vistas
+spring.thymeleaf.suffix=.html
+
+# Codificación
+spring.thymeleaf.encoding=UTF-8
+
+# Modo de caché (en desarrollo es útil poner false para ver cambios sin reiniciar)
+spring.thymeleaf.cache=false
 
