--- a/pom.xml
+++ b/pom.xml
@@ -123,26 +123,6 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
-		<!-- JSP -->
-		
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		
-		<!-- JSTL -->
-		
-		<dependency>
-			<groupId>jakarta.servlet.jsp.jstl</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
-		</dependency>
-		
 		<!-- Mapping con Dozer -->
 		
 		<dependency>
@@ -151,42 +131,60 @@
 			<version>5.5.1</version>
 		</dependency>
 
+		<!-- Thymeleaf -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
-		<plugins>
-			
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			
-			<plugin>
-      			<groupId>org.jacoco</groupId>
-     			<artifactId>jacoco-maven-plugin</artifactId>
-      			<version>0.8.7</version>
-      			<executions>
-        			<execution>
-          				<id>prepare-agent</id>
-          				<goals>
-            				<goal>prepare-agent</goal>
-          				</goals>
-        			</execution>
-        			<execution>
-          				<id>report</id>
-          				<goals>
-            				<goal>report</goal>
-          				</goals>
-          				<configuration>
-            				<formats>
-              					<format>XML</format>
-            				</formats>
-          				</configuration>
-        			</execution>
-      			</executions>
-    		</plugin>
-			
-		</plugins>
-	</build>
+    <plugins>
+
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+            <executions>
+                <execution>
+                    <id>prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                    <configuration>
+                        <formats>
+                            <format>XML</format>
+                        </formats>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.3.1</version>
+    <configuration>
+        <encoding>UTF-8</encoding>
+        <nonFilteredFileExtensions>
+            <nonFilteredFileExtension>properties</nonFilteredFileExtension>
+        </nonFilteredFileExtensions>
+    </configuration>
+</plugin>
+
+    </plugins>
+</build>
+
 
 </project>
