Se añade server.address=0.0.0.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,9 +54,10 @@ spring.thymeleaf.prefix=classpath:/META-INF/resources/WEB-INF/vistas/
 # Sufijo para las vistas
 spring.thymeleaf.suffix=.html
 
-# Codificación
+# Codificaciï¿½n
 spring.thymeleaf.encoding=UTF-8
 
-# Modo de caché (en desarrollo es útil poner false para ver cambios sin reiniciar)
+# Modo de cachï¿½ (en desarrollo es ï¿½til poner false para ver cambios sin reiniciar)
 spring.thymeleaf.cache=false
+server.address=0.0.0.0
 
